--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Wes Rings' UWRT 1103 English Portfolio</title>
+		<title>Wes Ring's UWRT 1103 English Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -22,7 +22,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<!--<span class="logo"><img src="images/logo.svg" alt="" /></span> -->
-						<h1>Wes Rings UWRT 1103 English Portfolio</h1>
+						<h1>Wes Ring's UWRT 1103 English Portfolio</h1>
 						<p>My studies of Genocide<br/></p>
 					</header>
 
@@ -44,12 +44,9 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>About me</h2>
+											<h2>Introduction</h2>
 										</header>
-										<p>Somthing somthing, i'm hella cool.Somthing somthing, i'm hella cool.Somthing somthing, i'm hella cool.Somthing somthing, i'm hella cool.
-										Somthing somthing, i'm hella cool.Somthing somthing, i'm hella cool.Somthing somthing, i'm hella cool.Somthing somthing, i'm hella cool.Somthing somthing, i'm hella cool.
-										Somthing somthing, i'm hella cool.Somthing somthing, i'm hella cool.Somthing somthing, i'm hella cool.Somthing somthing, i'm hella cool.Somthing somthing, i'm hella cool.
-										Somthing somthing, i'm hella cool.Somthing somthing, i'm hella cool.Somthing somthing, i'm hella cool.Somthing somthing, i'm hella cool.</p>
+										<p>This portfolio is an archive of my journey, studying genocide in my UWRT class the fall semester of 2016. Because of prior experience with web development, I decided to host my website myself. This gave me the flexibility of making my website look any way I want. I decided that the best way to organize my journey was in a timeline of sorts. You start at the top of the page with what you are reading now, then make your way down. </p>
 										<ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
