--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 										<header class="major">
 											<h2>Introduction</h2>
 										</header>
-										<p>This portfolio is an archive of my journey, studying genocide in my UWRT class the fall semester of 2016. Because of prior experience with web development, I decided to host my website myself. This gave me the flexibility of making my website look any way I want. I decided that the best way to organize my journey was in a timeline of sorts. You start at the top of the page with what you are reading now, then make your way down. </p>
+										<p>This portfolio is an archive of my journey, studying genocide in my UWRT class the fall semester of 2016. Because of prior experience with web development, I decided to host my website myself. This gave me the flexibility of making my website look any way I want. I decided that the best way to organize my journey was in a timeline of sorts.
+										You start at the top of the page with what you are reading now, then make your way down, following time as you read along. I wanted everything on the page to makes sense; I want it to be easy to read, effectively titled, and run well. As a writer, I hope that everything is formulated in a way that is easy to read, and does not put you to sleep. 
+										My goal with my work here is to make my research as enjoyable as possible to read. Thank you for your time.</p>
 										<ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
