--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<li><a href="#intro" class="active">Introduction</a></li>
 							<li><a href="#first">First Section</a></li>
 							<li><a href="#second">Second Section</a></li>
-							<li><a href="#cta">Get Started</a></li>
+							<li><a href="#cta">Third Section</a></li>
 						</ul>
 					</nav>
 
@@ -49,11 +49,8 @@
 										<p>This portfolio is an archive of my journey, studying genocide in my UWRT class the fall semester of 2016. Because of prior experience with web development, I decided to host my website myself. This gave me the flexibility of making my website look any way I want. I decided that the best way to organize my journey was in a timeline of sorts.
 										You start at the top of the page with what you are reading now, then make your way down, following time as you read along. I wanted everything on the page to makes sense; I want it to be easy to read, effectively titled, and run well. As a writer, I hope that everything is formulated in a way that is easy to read, and does not put you to sleep. 
 										My goal with my work here is to make my research as enjoyable as possible to read. Thank you for your time.</p>
-										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
-										</ul>
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<span class="image"><img src="images/cambodia.jpg" alt="Cambodian cleaning skulls" /></span>
 								</div>
 							</section>
 
@@ -65,17 +62,17 @@
 								<ul class="features">
 									<li>
 										<span class="icon major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
+										<h3>John Cox</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
+										<h3>My understanding of genocide</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-diamond"></span>
-										<h3>Dolor nullam</h3>
+										<h3>Other class work</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 								</ul>
@@ -89,36 +86,13 @@
 						<!-- Second Section -->
 							<section id="second" class="main special">
 								<header class="major">
-									<h2>Ipsum consequat</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h1>What leads to genocide?</h1>
+									<h3>My research on genocide and why it occurs.</h3>
 								</header>
-								<ul class="statistics">
-									<li class="style1">
-										<span class="icon fa-code-fork"></span>
-										<strong>5,120</strong> Etiam
-									</li>
-									<li class="style2">
-										<span class="icon fa-folder-open-o"></span>
-										<strong>8,192</strong> Magna
-									</li>
-									<li class="style3">
-										<span class="icon fa-signal"></span>
-										<strong>2,048</strong> Tempus
-									</li>
-									<li class="style4">
-										<span class="icon fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
-									</li>
-									<li class="style5">
-										<span class="icon fa-diamond"></span>
-										<strong>1,024</strong> Nullam
-									</li>
-								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
+								<p class="content">Genocide is a touchy subject. In society, most countries and societies are willing to recognize what has passed, but some are still in denial of the most widely known and factually supported genocides, like the Holocaust, or Armenian. Putting aside the fact that some countries outright deny the mere existence of genocide whether committed by them or not, we are left with countries that gloss over the in-depth facts of this horrible atrocity. To better understand what makes a genocide happen, to understand what drives a people to kill of their neighbor, we must look deeper into what has happened before us. By understanding what leads people to committing these crimes, we can prevent genocide from happening before it even becomes a threat. </p>
 								<footer class="major">
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="essay.html" class="button">Read more</a></li>
 									</ul>
 								</footer>
 							</section>
