--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">First Section</a></li>
-							<li><a href="#second">Second Section</a></li>
-							<li><a href="#cta">Third Section</a></li>
+							<li><a href="#first">Research Paper</a></li>
+							<li><a href="#second">Notes and sources</a></li>
+							<li><a href="#third">Other</a></li>
 						</ul>
 					</nav>
 
@@ -57,35 +57,6 @@
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Magna veroeros</h2>
-								</header>
-								<ul class="features">
-									<li>
-										<span class="icon major style1 fa-code"></span>
-										<h3>John Cox</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
-									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3>My understanding of genocide</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
-									<li>
-										<span class="icon major style5 fa-diamond"></span>
-										<h3>Other class work</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
-								</ul>
-								<footer class="major">
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
-							</section>
-
-						<!-- Second Section -->
-							<section id="second" class="main special">
-								<header class="major">
 									<h1>What leads to genocide?</h1>
 									<h3>My research on genocide and why it occurs.</h3>
 								</header>
@@ -97,28 +68,66 @@
 								</footer>
 							</section>
 
-						<!-- Get Started -->
-							<section id="cta" class="main special">
+						<!-- Second Section -->
+							<section id="second" class="main special">						
 								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Magna veroeros</h2>
 								</header>
-								<footer class="major">
-									<ul class="actions">
-										<li><a href="generic.html" class="button special">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
+								<ul class="features">
+									<li>
+										<span class="icon major style1 fa-code"></span>
+										<h3>Proposal</h3>
+										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<a href="generic.html" class="button">Learn More</a>
+									</li>
+									<li>
+										<span class="icon major style3 fa-copy"></span>
+										<h3>Literature Review</h3>
+										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<a href="generic.html" class="button">Learn More</a>
+									</li>
+									<li>
+										<span class="icon major style5 fa-diamond"></span>
+										<h3>Drafts</h3>
+										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<a href="generic.html" class="button">Learn More</a>
+									</li>
+								</ul>
 							</section>
 
+							<!-- Second Section -->
+							<section id="third" class="main special">						
+								<header class="major">
+									<h2>Magna veroeros</h2>
+								</header>
+								<ul class="features">
+									<li>
+										<span class="icon major style1 fa-code"></span>
+										<h3>John Cox</h3>
+										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<a href="generic.html" class="button">Learn More</a>
+									</li>
+									<li>
+										<span class="icon major style3 fa-copy"></span>
+										<h3>My understanding of genocide</h3>
+										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<a href="generic.html" class="button">Learn More</a>
+									</li>
+									<li>
+										<span class="icon major style5 fa-diamond"></span>
+										<h3>Other class work</h3>
+										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<a href="generic.html" class="button">Learn More</a>
+									</li>
+								</ul>
+							</section>
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
 							<h2>About Wes</h2>
 							<p>Wesley is a computer science major at the University of North Carolina at Charlotte. Connect with him at his website.</p>
-							<a href="http://wesring.com" class="button">Wes Ring's homepage</a>
+						<a href="http://wesring.com" class="button">Wes Ring's homepage</a>
 						<p class="copyright">&copy; Wes Ring. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
