--- a/index.html
+++ b/index.html
@@ -71,23 +71,23 @@
 						<!-- Second Section -->
 							<section id="second" class="main special">						
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2>Notes and Sources</h2>
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon major style1 fa-code"></span>
+										<span class="icon major style1 fa-pencil"></span>
 										<h3>Proposal</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 										<a href="generic.html" class="button">Learn More</a>
 									</li>
 									<li>
-										<span class="icon major style3 fa-copy"></span>
+										<span class="icon major style3 fa-repeat"></span>
 										<h3>Literature Review</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 										<a href="generic.html" class="button">Learn More</a>
 									</li>
 									<li>
-										<span class="icon major style5 fa-diamond"></span>
+										<span class="icon major style5 fa-copy"></span>
 										<h3>Drafts</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 										<a href="generic.html" class="button">Learn More</a>
@@ -102,13 +102,13 @@
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon major style1 fa-code"></span>
+										<span class="image main"><img src="images/John_cox.jpg" alt="John Cox" /></span>
 										<h3>John Cox</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 										<a href="generic.html" class="button">Learn More</a>
 									</li>
 									<li>
-										<span class="icon major style3 fa-copy"></span>
+										<span class="image main"><img src="images/khmer_rouge.jpg" alt="John Cox" /></span>
 										<h3>My understanding of genocide</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 										<a href="generic.html" class="button">Learn More</a>
