--- a/index.html
+++ b/index.html
@@ -104,17 +104,17 @@
 									<li>
 										<span class="image main"><img src="images/John_cox.jpg" alt="John Cox" /></span>
 										<h3>John Cox</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>My experience meeting John Cox.</p>
 										<a href="generic.html" class="button">Learn More</a>
 									</li>
 									<li>
 										<span class="image main"><img src="images/khmer_rouge.jpg" alt="John Cox" /></span>
 										<h3>My understanding of genocide</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>What I got from reading “To Kill a People” by John Cox</p>
 										<a href="generic.html" class="button">Learn More</a>
 									</li>
 									<li>
-										<span class="icon major style5 fa-diamond"></span>
+										<span class="image main"><img src="images/website_code.jpg" alt="John Cox" /></span>
 										<h3>Other class work</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 										<a href="generic.html" class="button">Learn More</a>
