Cleaning up title and descriptions

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<li><a href="#intro" class="active">Introduction</a></li>
 							<li><a href="#first">Research Paper</a></li>
 							<li><a href="#second">Notes and sources</a></li>
-							<li><a href="#third">Other</a></li>
+							<li><a href="#third">Other Work</a></li>
 						</ul>
 					</nav>
 
@@ -77,7 +77,7 @@
 									<li>
 										<span class="icon major style1 fa-pencil"></span>
 										<h3>Proposal</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>My Research papers proposal</p>
 										<a href="generic.html" class="button">Learn More</a>
 									</li>
 									<li>
@@ -89,7 +89,7 @@
 									<li>
 										<span class="icon major style5 fa-copy"></span>
 										<h3>Drafts</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>How I did draft work</p>
 										<a href="generic.html" class="button">Learn More</a>
 									</li>
 								</ul>
@@ -98,7 +98,7 @@
 							<!-- Second Section -->
 							<section id="third" class="main special">						
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2>Other Work</h2>
 								</header>
 								<ul class="features">
 									<li>
@@ -115,8 +115,8 @@
 									</li>
 									<li>
 										<span class="image main"><img src="images/website_code.jpg" alt="John Cox" /></span>
-										<h3>Other class work</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>Non related class work</h3>
+										<p>Here you will find an example writing I did for my 1600 Computing Professionals class.</p>
 										<a href="generic.html" class="button">Learn More</a>
 									</li>
 								</ul>
