Images, a proposal, a spelling fix, and a better base page

--- a/index.html
+++ b/index.html
@@ -75,21 +75,22 @@
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon major style1 fa-pencil"></span>
+										<span class="image main"><img src="images/rwanda_man_escapeing_square.jpg" alt="rwandan man escaping" /></span>
 										<h3>Proposal</h3>
 										<p>My Research papers proposal</p>
-										<a href="generic.html" class="button">Learn More</a>
+										<a href="proposal.html" class="button">Learn More</a>
 									</li>
 									<li>
-										<span class="icon major style3 fa-repeat"></span>
+										<span class="image main"><img src="images/khmer_rouge_angry_man.jpg" alt="khmer rouge" /></span>
 										<h3>Literature Review</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-										<a href="generic.html" class="button">Learn More</a>
+										<p>My notes on my sources</p>
+										<a href="literaturereview.html" class="button">Learn More</a>
 									</li>
 									<li>
-										<span class="icon major style5 fa-copy"></span>
-										<h3>Drafts</h3>
-										<p>How I did draft work</p>
+										<span class="image main"><img src="images/hutu_prisoners_take_shelter.jpg" alt="Ethnic Hutu prisoners take shelter from the rain under a tin roof in the open courtyard of the crowded Kigali Prison in 1994. None of the prisoners had been officially charged, though all been accused of involvement in the mass slaughter.
+PHOTOGRAPH BY DAVID GUTTENFELDER" /></span>
+										<h3>Commentary</h3>
+										<p>Personal insite about my paper</p>
 										<a href="generic.html" class="button">Learn More</a>
 									</li>
 								</ul>
