--- a/essay.html
+++ b/essay.html
@@ -48,7 +48,7 @@
 							
 								<footer class="major">
 								<br><br><br>
-									<h2>Work Cited</h2>
+									<h2>Works Cited</h2>
 									<p>Acemoglu, Daron, and James Robinson. "10 Reasons Countries Fall Apart." Foreign Policy Comments. Foreignpolicy.com, 18 June 2012. Web. 31 Oct. 2016.</p>
 									<p>CGPGrey. "The Rules for Rulers." YouTube. YouTube, 24 Oct. 2016. Web. 31 Oct. 2016.</p>
 									<p>"Children Playing with Stacks of Hyperinflated Currency during the Weimar Republic, 1922." Rare Historical Photos. Rare Historical Photos, 08 Oct. 2016. Web. 26 Nov. 2016.</p>
