Added commentary, literacy and meeting John Cox scans, and 1600 work

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 										<span class="image main"><img src="images/hutu_prisoners_take_shelter.jpg" alt="Ethnic Hutu prisoners take shelter from the rain under a tin roof in the open courtyard of the crowded Kigali Prison in 1994. None of the prisoners had been officially charged, though all been accused of involvement in the mass slaughter.
 PHOTOGRAPH BY DAVID GUTTENFELDER" /></span>
 										<h3>Commentary</h3>
-										<p>Personal insite about my paper</p>
-										<a href="generic.html" class="button">Learn More</a>
+										<p>Personal insight about my paper</p>
+										<a href="myCommentary.html" class="button">Learn More</a>
 									</li>
 								</ul>
 							</section>
@@ -106,19 +106,19 @@ PHOTOGRAPH BY DAVID GUTTENFELDER" /></span>
 										<span class="image main"><img src="images/John_cox.jpg" alt="John Cox" /></span>
 										<h3>John Cox</h3>
 										<p>My experience meeting John Cox.</p>
-										<a href="generic.html" class="button">Learn More</a>
+										<a href="meetingJohnCox.html" class="button">Learn More</a>
 									</li>
 									<li>
 										<span class="image main"><img src="images/khmer_rouge.jpg" alt="John Cox" /></span>
 										<h3>My understanding of genocide</h3>
-										<p>What I got from reading “To Kill a People” by John Cox</p>
-										<a href="generic.html" class="button">Learn More</a>
+										<p>What I learned from reading “To Kill a People” by John Cox and personal research</p>
+										<a href="literacyInGenocide.html" class="button">Learn More</a>
 									</li>
 									<li>
 										<span class="image main"><img src="images/website_code.jpg" alt="John Cox" /></span>
 										<h3>Non related class work</h3>
 										<p>Here you will find an example writing I did for my 1600 Computing Professionals class.</p>
-										<a href="generic.html" class="button">Learn More</a>
+										<a href="1600MyFuture.html" class="button">Learn More</a>
 									</li>
 								</ul>
 							</section>
