--- a/literacyInGenocide.html
+++ b/literacyInGenocide.html
@@ -30,9 +30,9 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								
 								<span class="image fit"><img src="images/literacyInGenocode1.jpg" alt="" /></span>
 								<span class="image fit"><img src="images/literacyInGenocode2.jpg" alt="" /></span>
+								<p>This was a short quick write we did in class, where I describe my knowlage of genocide, and how this project has furthered it.</p>
 							</section>
 
 					</div>
