--- a/1600MyFuture.html
+++ b/1600MyFuture.html
@@ -30,7 +30,7 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-							<p>This is a writing I had to do for my computing professionals class. In summery it is a simple plan for my future. It includes both short and long term goals.</p>
+							<p>This is a writing I had to do for my computing professionals class. In summary it is a simple plan for my future. It includes both short and long term goals.</p>
 							<div><div><div>
 							<p>&emsp;&emsp;In my carrier in Computer Science, I want to become successful enough to support my family, I want to enjoy my job, and I want to be able to make a change in the world. These are long term goals, they are things that I will eventually do if I strive to achieve them. Short term, I want to pass all my classes, learn more about information security, and get an internship. Achieving these short-term goals will pave the path to help me achieve my final long term goals.</p>
 							<p>&emsp;&emsp;To do good in my classes I need to strive to get all my work done on time, and I need to comprehend the subject. If I do not understand what to do, I need to seek help. This could be me asking a friend who is in the same class for a tutorial, or meeting with someone in one of the counseling centers. If I have a hard time in the specific subject, I can decide to schedule a weekly session in the counseling center. Succeeding here will help me get my foot in the door for an internship, because showing that I can manage grade shows responsibility. </p>
