--- a/literaturereview.html
+++ b/literaturereview.html
@@ -22,7 +22,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Literature Review</h1>
-						<p>A summery of the articles I sourced</p>
+						<p>A summary of the articles I sourced</p>
 					</header>
 
 				<!-- Main -->
